# stm32f103c8t6_test_ci_cd

./: .cproject  .gitignore  .gitmodules  .project  CHANGELOG.md  CMakeLists.txt  arm-none-eabi-gcc.cmake  stm32f103c8t6_test_ci_cd.ioc
.github/workflows/: build-binaries.yml
Core/Src/: main.cpp
